gitops/template-gateway/02-gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-gateway
spec:
  gatewayClassName: eg

  listeners:
    - name: http
      protocol: HTTP
      port: 80
